# Embrozy

./: .gitignore  CMakeLists.txt  README.md  main.cpp  todo.md
Source/: Source.md
Source/core/: CoreTodo.md
Source/core/area/: area.hpp  cell.hpp  cube.hpp  dust.cpp  dust.hpp
Source/core/area/types/: Types.md  dustType.hpp
Source/core/render/: camera.hpp  render.cpp  window.cpp  window.hpp
assets/shaders/: main.fs  main.vs
glad/: Load.txt
include/: DS  download.txt
src/: Source.md  game.cpp  game.hpp
src/core/: CoreTodo.md  core.cpp  core.hpp  map.hpp
src/core/area/: area.cpp  area.hpp  cell.cpp  cell.hpp  cube.hpp  dust.cpp  dust.hpp
src/core/area/pcg/: world-gen.cpp  world-gen.hpp
src/core/area/player/: player.hpp
src/core/area/surfaces/: surface.hpp
src/core/area/types/: Types.md  dustType.hpp
src/core/render/: camera.cpp  camera.hpp  render.cpp  render.hpp  shaders.hpp  window.cpp  window.hpp
src/engine/: engine.cpp  engine.hpp
src/engine/area/: area.cpp  area.hpp  cell.cpp  cell.hpp
src/engine/physics/: physics_engine.hpp
src/engine/renderer/: renderer.cpp  renderer.hpp  renderer_obj.hpp
src/engine/sound/: sound_engine.hpp
src/settings_control/: settings_controller.hpp
src/ui/: ui.hpp
src/ui/gui/: gui.hpp
src/window/: window.cpp  window.hpp
stb/: load.txt
